complexify as tensor product

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /lakefile.olean
 # After v4.3.0-rc2 lake stores its files here:
 /.lake/
+# Ignore Scratch.lean as a scratch pad
+/Axler/Scratch.lean
